--- a/JavaScript/Entrega 2 del proyecto web de recetas/Practica pagina web proyecto/Estructura/CSS/styles.css
+++ b/JavaScript/Entrega 2 del proyecto web de recetas/Practica pagina web proyecto/Estructura/CSS/styles.css
@@ -151,6 +151,8 @@ body {
 }
 
 
+
+
 /* Tutoriales */
 .tutorials {
     padding: 2rem 0;
@@ -280,6 +282,19 @@ button {
     font-size: 1rem;
     transition: background 0.3s;
     margin: 0.5rem;
+}
+
+select {
+    padding: 0.75rem 2rem;
+    background: #00416a;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1rem;
+    transition: background 0.3s;
+    margin: 0.5rem;
+    width: 13%;
 }
 
 button[type="reset"] {
